Remove MusicStore specific stuff
Add Manage controller

--- a/samples/Identity.Mvc/Views/Account/Login.cshtml
+++ b/samples/Identity.Mvc/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model MusicStore.Models.LoginViewModel
+﻿@model IdentitySample.Models.LoginViewModel
 
 @{
     //TODO: Until we have a way to specify the layout page at application level.
