--- a/samples/Identity.Mvc/Views/Manage/ChangePassword.cshtml
+++ b/samples/Identity.Mvc/Views/Manage/ChangePassword.cshtml
@@ -1,14 +1,18 @@
-﻿@using System.Security.Principal
-@model IdentitySample.Models.ManageUserViewModel
+﻿@model IdentitySample.Models.ChangePasswordViewModel
+@{
+    //TODO: Until we have a way to specify the layout page at application level.
+    Layout = "/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Change Password";
+}
 
-<p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
+<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Change Password Form</h4>
     <hr />
-    @Html.ValidationSummary()
+    @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
