--- a/samples/Identity.Mvc/Views/Account/Register.cshtml
+++ b/samples/Identity.Mvc/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MusicStore.Models.RegisterViewModel
+﻿@model IdentitySample.Models.RegisterViewModel
 @{
     //TODO: Until we have a way to specify the layout page at application level.
     Layout = "/Views/Shared/_Layout.cshtml";
