--- a/samples/Identity.Mvc/Views/Shared/_Layout.cshtml
+++ b/samples/Identity.Mvc/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title – MVC Music Store</title>
+    <title>@ViewBag.Title – ASP.NET Identity</title>
 
     @*TODO : Until script helpers are available, adding script references manually*@
     @*@Styles.Render("~/Content/css")
@@ -21,13 +21,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("ASP.NET MVC Music Store", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("ASP.NET Identity", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @await Component.InvokeAsync("GenreMenu")
-                    @await Component.InvokeAsync("CartSummary")
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -36,10 +34,6 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="navbar navbar-fixed-bottom navbar-default text-center">
-            <p><a href="http://mvcmusicstore.codeplex.com">mvcmusicstore.codeplex.com</a></p>
-            <small>@Html.ActionLink("admin", "Index", "StoreManager")</small>
-        </footer>
     </div>
 
     @*TODO : Until script helpers are available, adding script references manually*@
