--- a/samples/IdentitySample.Mvc/Views/Manage/SetPassword.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,9 @@
 ﻿@model IdentitySample.Models.SetPasswordViewModel
+@{
+    //TODO: Until we have a way to specify the layout page at application level.
+    Layout = "/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Set Password";
+}
 
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
@@ -9,7 +14,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Set your password</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -31,5 +36,8 @@
     </div>
 }
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @*TODO : Until script helpers are available, adding script references manually*@
+    @*@Scripts.Render("~/bundles/jqueryval")*@
+    <script src="@Url.Content("~/Scripts/jquery.validate.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"></script>
 }
