--- a/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
@@ -49,6 +49,11 @@
             }
         </section>
     </div>
+    <div class="col-md-4">
+        <section id="socialLoginForm">
+            @await Html.PartialAsync("_ExternalLoginsListPartial", new IdentitySample.Models.ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>
 </div>
 @section Scripts {
     @*TODO : Until script helpers are available, adding script references manually*@
