--- a/samples/IdentitySample.Mvc/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ExternalLoginConfirmation.cshtml
@@ -36,6 +36,6 @@
 @section Scripts {
     @*TODO : Until script helpers are available, adding script references manually*@
     @*@Scripts.Render("~/bundles/jqueryval")*@
-    <script src="@Url.Content(" ~ />Scripts/jquery.validate.js")"></script>
-    <script src="@Url.Content(" ~ />Scripts/jquery.validate.unobtrusive.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"></script>
 }
