Working confirmation/two factor flow
Add DataProtectionTokenProvider back

--- a/samples/IdentitySample.Mvc/Views/Account/Register.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/Register.cshtml
@@ -14,9 +14,9 @@
     <hr />
     @Html.ValidationSummary()
     <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
