Add forgot passowrd link

--- a/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
@@ -47,7 +47,10 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register", "Register") if you don't have a local account.
+                    @Html.ActionLink("Register a new user?", "Register")
+                </p>
+                <p>
+                    @Html.ActionLink("Forget your password?", "ForgotPassword")
                 </p>
             }
         </section>
