Fix typos in Views\Home\Index.cshtml

--- a/samples/IdentitySample.Mvc/Views/Home/Index.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                         <a href="http://www.windowsazure.com/en-us/documentation/articles/web-sites-dotnet-deploy-aspnet-mvc-app-membership-oauth-sql-database/">Add Social Logins</a>
                     </li>
                     <li>
-                        <a href="http://blogs.msdn.com/b/webdev/archive/2013/10/16/get-more-information-from-social-providers-used-in-the-vs-2013-project-templates.aspx">Get more data about the user when they login suing Facebook</a>
+                        <a href="http://blogs.msdn.com/b/webdev/archive/2013/10/16/get-more-information-from-social-providers-used-in-the-vs-2013-project-templates.aspx">Get more data about the user when they login using Facebook</a>
                     </li>
                 </ul>
             </dd>
@@ -102,7 +102,7 @@
             <dt>Account Confirmation</dt>
             <dd>
                 When you register a new account, you will be sent an email confirmation.
-                You can use an email service such as <a href="http://www.windowsazure.com/en-us/documentation/articles/sendgrid-dotnet-how-to-send-email/">SendGrid</a> which integrate nicely with Windows Azure and requires no configuration or
+                You can use an email service such as <a href="http://www.windowsazure.com/en-us/documentation/articles/sendgrid-dotnet-how-to-send-email/">SendGrid</a> which integrates nicely with Windows Azure and requires no configuration or
                 set up an SMTP server to send email.
                 You can send email using the EmailService which is registered in App_Start\IdentityConfig.cs
             </dd>
