React to auth changes

--- a/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
@@ -52,7 +52,7 @@
         <p>
             @foreach (AuthenticationDescription p in Model.OtherLogins)
             {
-                <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                <button type="submit" class="btn btn-default" id="@p.AuthenticationScheme" name="provider" value="@p.AuthenticationScheme" title="Log in using your @p.Caption account">@p.AuthenticationScheme</button>
             }
         </p>
         </div>
