Fix samples external auth flow

--- a/samples/IdentitySample.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Security.Principal
 
-@if (User.Identity.IsAuthenticated)
+@if (User.IsLoggedIn())
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
