Update samples to templates

--- a/samples/IdentitySample.Mvc/Views/Account/ExternalLoginFailure.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ExternalLoginFailure.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Login Failure";
+    ViewData["Title"] = "Login Failure";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-error">Unsuccessful login with service.</h3>
-</hgroup>
+<header>
+    <h2>@ViewData["Title"].</h2>
+    <p class="text-danger">Unsuccessful login with service.</p>
+</header>
