--- a/samples/IdentitySample.Mvc/Views/Account/ConfirmEmail.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ConfirmEmail.cshtml
@@ -1,12 +1,10 @@
 ﻿@{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Confirm Email";
+    ViewData["Title"] = "Confirm Email";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewData["Title"].</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Thank you for confirming your email. Please <a asp-controller="Account" asp-action="Login">Click here to Log in</a>.
     </p>
 </div>
