--- a/samples/IdentitySample.Mvc/Views/Account/ForgotPassword.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ForgotPassword.cshtml
@@ -1,34 +1,31 @@
-﻿@model IdentitySample.Models.ForgotPasswordViewModel
+﻿@model ForgotPasswordViewModel
 @{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Forgot your password?";
+    ViewData["Title"] = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewData["Title"].</h2>
+<p>
+    For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
+</p>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
+@*<form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
     <h4>Enter your email.</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <label asp-for="Email" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+            <button type="submit" class="btn btn-default">Submit</button>
         </div>
     </div>
-}
+</form>*@
 
 @section Scripts {
-    @*TODO : Until script helpers are available, adding script references manually*@
-    @*@Scripts.Render("~/bundles/jqueryval")*@
-    <script src="@Url.Content("~/Scripts/jquery.validate.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"></script>
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
