--- a/samples/IdentitySample.Mvc/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,19 +1,8 @@
 ﻿@{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewData["Title"] = "Forgot Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
-    <p class="text-danger">
-        For DEMO only: You can click this link to reset password: <a href="@ViewBag.Link">link</a>
-        Please change this code to register an email service in IdentityConfig to send an email.
-    </p>
-</div>
-
+<h2>@ViewData["Title"].</h2>
+<p>
+    Please check your email to reset your password.
+</p>
