--- a/samples/IdentitySample.Mvc/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,14 +1,8 @@
 ﻿@{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Reset password confirmation";
+    ViewData["Title"] = "Reset password confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+<h1>@ViewData["Title"].</h1>
+<p>
+    Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
+</p>
