--- a/samples/IdentitySample.Mvc/Views/Account/SendCode.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/SendCode.cshtml
@@ -1,27 +1,21 @@
-﻿@model IdentitySample.Models.SendCodeViewModel
+﻿@model SendCodeViewModel
 @{
-    //TODO: Until we have a way to specify the layout page at application level.
-    Layout = "/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Send Verification Code";
+    ViewData["Title"] = "Send Verification Code";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewData["Title"].</h2>
 
-@using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
-    @Html.AntiForgeryToken()
-    @Html.Hidden("rememberMe", @Model.RememberMe)
+<form asp-controller="Account" asp-action="SendCode" asp-route-returnurl="@Model.ReturnUrl" method="post" class="form-horizontal" role="form">
+    <input asp-for="RememberMe" type="hidden" />
     <div class="row">
         <div class="col-md-8">
-            Two Factor Authentication Provider:
-            @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Submit" class="btn btn-default" />
+            Select Two-Factor Authentication Provider:
+            <select asp-for="SelectedProvider" asp-items="Model.Providers"></select>
+            <button type="submit" class="btn btn-default">Submit</button>
         </div>
     </div>
-}
+</form>
 
 @section Scripts {
-    @*TODO : Until script helpers are available, adding script references manually*@
-    @*@Scripts.Render("~/bundles/jqueryval")*@
-    <script src="@Url.Content("~/Scripts/jquery.validate.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
