--- a/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
@@ -46,7 +46,7 @@
             <p>
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.Name account">@provider.Name</button>
                 }
             </p>
         </div>
