--- a/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Account/Login.cshtml
@@ -3,7 +3,6 @@
 @using Microsoft.AspNetCore.Authentication
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
-@inject IAuthenticationSchemeProvider SchemeProvider
 
 @{
     ViewData["Title"] = "Log in";
@@ -60,10 +59,10 @@
             <h4>Use another service to log in.</h4>
             <hr />
             @{
-                var schemes = await SchemeProvider.GetAllSchemesAsync();
+                var schemes = await SignInManager.GetExternalAuthenticationSchemesAsync();
                 var loginProviders = schemes.ToList();
                 if (loginProviders.Count == 0)
-                {
+                        {
                     <div>
                         <p>
                             There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
