--- a/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,5 @@
 @model ManageLoginsViewModel
-@using Microsoft.AspNetCore.Http.Authentication
+@using Microsoft.AspNetCore.Authentication
 @{
     ViewData["Title"] = "Manage your external logins";
 }
@@ -46,7 +46,7 @@
             <p>
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.Name account">@provider.Name</button>
+                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.Name account">@provider.DisplayName</button>
                 }
             </p>
         </div>
