--- a/samples/IdentityOIDCWebApplicationSample/Views/Shared/_Layout.cshtml
+++ b/samples/IdentityOIDCWebApplicationSample/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @Html.Partial("_AreaMenuItems")
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
