--- a/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/ClientSecret.cshtml
+++ b/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/ClientSecret.cshtml
@@ -1,4 +1,4 @@
-﻿@using IIdentity.ClientApplications.WebSiteIdentity.Models.ApplicationViewModels
+﻿@using Identity.ClientApplications.WebSite
 @model CredentialsViewModel
 <div>
     <h4>Your application credentials</h4>
