--- a/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/Details.cshtml
+++ b/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using IIdentity.ClientApplications.WebSiteIdentity.Models.ApplicationViewModels
+﻿@using Identity.ClientApplications.WebSite
 @model ApplicationDetailsViewModel
     <div>
         <h4>View your application settings</h4>
