--- a/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/RegenerateClientSecret.cshtml
+++ b/test/WebSites/Identity.ClientApplications.WebSite/Areas/Identity/Views/Applications/RegenerateClientSecret.cshtml
@@ -1,4 +1,4 @@
-﻿@using IIdentity.ClientApplications.WebSiteIdentity.Models.ApplicationViewModels
+﻿@using Identity.ClientApplications.WebSite
 @model string
 
     @{
