--- a/test/WebSites/Identity.ClientApplications.WebSite/Views/_ViewImports.cshtml
+++ b/test/WebSites/Identity.ClientApplications.WebSite/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using IIdentity.ClientApplications.WebSite
+﻿@using Identity.ClientApplications.WebSite
 @using Identity.ClientApplications.WebSite.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
