fixed typos, mostly in documentation comments

--- a/samples/IdentitySample.Mvc/Views/Home/Index.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
             <dt>Custom Storage providers</dt>
             <dd>
                 You can extend ASP.NET Identity to write your own custom storage provider for storing the ASP.NET Identity system and user data
-                in a persistance system of your choice such as MondoDb, RavenDb, Azure Table Storage etc.
+                in a persistence system of your choice such as MondoDb, RavenDb, Azure Table Storage etc.
             </dd>
             <dd>
                 <ul>
