--- a/src/UI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -11,5 +11,6 @@
         <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-page="./ExternalLogins">External logins</a></li>
     }
     <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="@ManageNavPages.PrivacyNavClass(ViewContext)"><a asp-page="./Privacy">Privacy</a></li>
 </ul>
 
