--- a/src/UI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -10,16 +10,13 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>This action will delete your user.</strong>
-    </p>
-    <p>
-        This is unrecoverable.
+        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
     </p>
 </div>
 
 <div>
     <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Delete user and personal data</button>
+        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
     </form>
 </div>
 
