--- a/src/UI/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button name="login" type="submit" class="btn btn-default">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
