--- a/test/WebSites/Identity.DefaultUI.WebSite/Pages/_Layout.cshtml
+++ b/test/WebSites/Identity.DefaultUI.WebSite/Pages/_Layout.cshtml
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Identity.DefaultUI.WebSite</title>
+    <title>@ViewData["Title"] - YEAHHHHHHHHHHHH BRO</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
