--- a/src/UI/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = "TwoFactorAuthentication";
 }
 
+@Html.Partial("_StatusMessage", Model.StatusMessage)
 <h4>@ViewData["Title"]</h4>
 <div class="alert alert-warning" role="alert">
     <p>
