--- a/test/WebSites/Identity.DefaultUI.WebSite/Pages/Shared/_LoginPartial.cshtml
+++ b/test/WebSites/Identity.DefaultUI.WebSite/Pages/Shared/_LoginPartial.cshtml
@@ -8,10 +8,10 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button id="logout" type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
         </ul>
     </form>
@@ -19,7 +19,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+        <li><a id="register" asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+        <li><a id="login" asp-area="Identity" asp-page="/Account/Login">Login</a></li>
     </ul>
 }
