[Fixes #1639] Reset password doesn't work

--- a/src/UI/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
