--- a/src/UI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -15,7 +15,7 @@
 </div>
 
 <div>
-    <form method="post" class="form-group">
+    <form id="delete-user" method="post" class="form-group">
         <div asp-validation-summary="All" class="text-danger"></div>
         @if (Model.RequirePassword)
         {
