Add ResetAuthenticator and RemoveExternalLogin test

--- a/src/UI/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -18,7 +18,7 @@
     </p>
 </div>
 <div>
-    <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Reset authenticator key</button>
+    <form id="reset-authenticator-form" method="post" class="form-group">
+        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
     </form>
 </div>
