--- a/src/UI/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -17,7 +17,7 @@
                     <td>
                         @if (Model.ShowRemoveButton)
                         {
-                            <form asp-page-handler="RemoveLogin" method="post">
+                            <form id="remove-login" asp-page-handler="RemoveLogin" method="post">
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
@@ -39,12 +39,12 @@
 {
     <h4>Add another service to log in.</h4>
     <hr />
-    <form asp-page-handler="LinkLogin" method="post" class="form-horizontal">
+    <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
             <p>
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    <button id="link-login-button" type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                 }
             </p>
         </div>
