Use partial tag helper

--- a/src/UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -16,7 +16,7 @@
     <hr />
     <div class="row">
         <div class="col-md-3">
-            @await Html.PartialAsync("_ManageNav")
+            <partial name="_ManageNav" />
         </div>
         <div class="col-md-9">
             @RenderBody()
