#1732 Making UserManager<TUser> Implement IUserManager<TUser>, initial code changes

--- a/samples/IdentitySample.DefaultUI/Views/Shared/_LoginPartial.cshtml
+++ b/samples/IdentitySample.DefaultUI/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 @using IdentitySample.DefaultUI.Data
 @inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject IUserManager<ApplicationUser> userManager
 
 @if (SignInManager.IsSignedIn(User))
 {
