--- a/samples/IdentitySample.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @using IdentitySample.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject IUserManager<ApplicationUser> userManager
 
 @if (SignInManager.IsSignedIn(User))
 {
